# vega_final_project

./: README.md  docker-compose.yml
.github/workflows/: bsm-pricing-tests.yml  cpp-ci.yml
api_cli/: .dockerignore  CMakeLists.txt  Dockerfile  read_pipe.sh
api_cli/include/: cli_config.hpp  market_data_provider.hpp  moex_client.hpp  price_pipe.hpp  price_update.hpp  pricing_service.hpp  randomized_provider.hpp  ticker_loader.hpp
api_cli/src/: main.cpp  moex_client.cpp  price_pipe.cpp  pricing_service.cpp  randomized_provider.cpp  ticker_loader.cpp
api_cli/tests/: CMakeLists.txt  functional_tests.cpp  unit_tests.cpp
bsm_pricing/: .env  CMakeLists.txt  Dockerfile
bsm_pricing/include/: bsm_service.hpp  influx_writer.hpp  messages.hpp  option_pricer.hpp  postgres_writer.hpp  price_pipe.hpp
bsm_pricing/src/: bsm_service.cpp  influx_writer.cpp  main.cpp  option_pricer.cpp  postgres_writer.cpp  price_pipe.cpp
bsm_pricing/tests/: CMakeLists.txt  functional_tests.cpp  unit_tests.cpp
db_migrations/: 001_init_bsm_schema.sql  002_create_users.sql  003_add_column_params.sql  004_add_ticker_id_to_bsm_params.sql  005_drop_ticker_column_from_bsm_params.sql  006_add_unique_ticker_price_key.sql  007_rename_column.sql  008_insert_sber.sql
docs/graph/: db.graphml  scheme.graphml
grafana/provisioning/dashboards/: dashboards.yml  ticker_price.json
grafana/provisioning/datasources/: vega-postgres.yml
graph/: scheme.graphml
